--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "@types/ramda": "github:types/npm-ramda#dist",
     "copy": "^0.3.1",
+    "copy-webpack-plugin": "^4.1.1",
     "css-loader": "^0.28.7",
     "expose-loader": "^0.7.3",
     "fork-ts-checker-webpack-plugin": "^0.2.8",
