--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "crystal_quest",
+  "name": "planete_mars",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "devDependencies": {
+    "@types/node": "^8.0.34",
     "@types/ramda": "github:types/npm-ramda#dist",
     "copy": "^0.3.1",
     "copy-webpack-plugin": "^4.1.1",
@@ -12,6 +13,7 @@
     "fork-ts-checker-webpack-plugin": "^0.2.8",
     "happypack": "^4.0.0",
     "phaser-ce": "^2.8.8",
+    "planck-js": "^0.1.34",
     "style-loader": "^0.19.0",
     "ts-loader": "^2.3.7",
     "watch": "^1.0.2"
