--- a/package.json
+++ b/package.json
@@ -5,15 +5,14 @@
   "main": "index.js",
   "devDependencies": {
     "@types/node": "^8.0.34",
-    "@types/ramda": "github:types/npm-ramda#dist",
     "copy": "^0.3.1",
     "copy-webpack-plugin": "^4.1.1",
     "css-loader": "^0.28.7",
+    "eventemitter3": "^2.0.3",
     "expose-loader": "^0.7.3",
     "fork-ts-checker-webpack-plugin": "^0.2.8",
     "happypack": "^4.0.0",
     "phaser-ce": "^2.8.8",
-    "planck-js": "^0.1.34",
     "style-loader": "^0.19.0",
     "ts-loader": "^2.3.7",
     "watch": "^1.0.2"
