Reorganized packages and imports using non-relative paths

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,12 @@
     "target": "es5",
     "allowJs": true,
     "downlevelIteration": true,
-    "lib": ["dom", "es6", "es2016", "dom.iterable", "scripthost"]
+    "lib": ["dom", "es6", "es2016", "dom.iterable", "scripthost"],
+    "moduleResolution": "node",
+    "baseUrl": "src",
+    "paths": {
+      "*": ["*"]
+    }
   },
   "files": [
     "node_modules/phaser-ce/typescript/phaser.d.ts"
