--- a/package.json
+++ b/package.json
@@ -4,18 +4,14 @@
   "description": "",
   "main": "index.js",
   "devDependencies": {
-    "@types/node": "^8.0.34",
-    "copy": "^0.3.1",
-    "copy-webpack-plugin": "^4.1.1",
-    "css-loader": "^0.28.7",
-    "eventemitter3": "^2.0.3",
-    "expose-loader": "^0.7.3",
-    "fork-ts-checker-webpack-plugin": "^0.2.8",
-    "happypack": "^4.0.0",
-    "phaser-ce": "^2.8.8",
-    "style-loader": "^0.19.0",
-    "ts-loader": "^2.3.7",
-    "watch": "^1.0.2"
+    "@types/node": "^10.5.6",
+    "copy-webpack-plugin": "^4.5.2",
+    "expose-loader": "^0.7.5",
+    "phaser-ce": "^2.11.0",
+    "ts-loader": "^4.4.2",
+    "typescript": "^3.0.1",
+    "webpack": "^4.16.4",
+    "webpack-dev-server": "^3.1.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
