--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "target": "es5",
     "allowJs": true,
     "downlevelIteration": true,
-    "lib": ["dom", "es6", "es2016", "dom.iterable", "scripthost"],
+    "lib": ["dom", "es6", "es2016", "es2017.object", "dom.iterable", "scripthost"],
     "moduleResolution": "node"
   },
   "files": [
